<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/p01"
    tools:context=".LoggedInUser.merchFragment">


    <TextView
        android:id="@+id/textHello"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/merch"
        android:textColor="@color/neon_pink"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textHello"
        android:layout_marginTop="1dp">


        <LinearLayout
            android:id="@+id/layoutTshirt"
            android:layout_width="167dp"
            android:layout_height="170dp"
            android:background="@drawable/announce"
            android:backgroundTint="#B894C8"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="15dp"
            app:layout_constraintDimensionRatio="M, 1:1"
            app:layout_constraintEnd_toStartOf="@id/layoutMug"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:layout_width="129dp"
                android:layout_height="97dp"
                android:layout_margin="8dp"
                android:contentDescription="@string/app_name"
                android:padding="8dp"
                android:src="@drawable/tshirt" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/t_shirt"
                android:textColor="@color/colorAccent"
                android:textSize="20sp"
                android:textStyle="bold" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/layoutMug"
            android:layout_width="167dp"
            android:layout_height="170dp"
            android:background="@drawable/announce"
            android:backgroundTint="#B894C8"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="15dp"
            app:layout_constraintDimensionRatio="M, 1:1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/layoutTshirt"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:layout_width="129dp"
                android:layout_height="97dp"
                android:layout_margin="8dp"
                android:contentDescription="@string/app_name"
                android:padding="8dp"
                android:src="@drawable/mug" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/mug"
                android:textColor="@color/colorAccent"
                android:textSize="20sp"
                android:textStyle="bold" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/layoutTotebag"
            android:layout_width="167dp"
            android:layout_height="170dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/announce"
            android:backgroundTint="#B894C8"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="15dp"
            app:layout_constraintDimensionRatio="M, 1:1"
            app:layout_constraintEnd_toStartOf="@id/layoutMug"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/layoutTshirt">

            <ImageView
                android:layout_width="129dp"
                android:layout_height="97dp"
                android:layout_margin="8dp"
                android:contentDescription="@string/app_name"
                android:padding="8dp"
                android:src="@drawable/totebag" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/totebag"
                android:textColor="@color/colorAccent"
                android:textSize="20sp"
                android:textStyle="bold" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/layoutCap"
            android:layout_width="167dp"
            android:layout_height="170dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/announce"
            android:backgroundTint="#B894C8"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="15dp"
            app:layout_constraintDimensionRatio="M, 1:1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/layoutTshirt"
            app:layout_constraintTop_toBottomOf="@id/layoutMug">

            <ImageView
                android:layout_width="129dp"
                android:layout_height="97dp"
                android:layout_margin="8dp"
                android:contentDescription="@string/app_name"
                android:padding="8dp"
                android:src="@drawable/cap" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/cap"
                android:textColor="@color/colorAccent"
                android:textSize="20sp"
                android:textStyle="bold" />

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
       android:layout_marginRight="30dp"
        android:layout_marginBottom="70dp">
        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/floatingCart"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_shopping_cart"></com.google.android.material.floatingactionbutton.FloatingActionButton>

        <TextView
            android:id="@+id/cartCounter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/carttextcircle"
            android:backgroundTint="#919BFD"
            android:elevation="10dp"
            android:paddingLeft="7dp"
            android:paddingRight="7dp"
            android:text=" ">
        </TextView>

    </RelativeLayout>

    <Button
        android:id="@+id/btnView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginRight="30dp"
        android:layout_marginBottom="76dp"
        android:backgroundTint="@color/B3EAFB"
        android:text="View Payment"
        android:textColor="@color/black" />

</RelativeLayout>